// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Order pizza"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={295}
      createdAt={-345600000}
      description="Order from Pizza Hut"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={30}
      createdAt={345600000}
      description="Pay phone bill"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render Expense List without any expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses found.
      </span>
    </div>
  </div>
</div>
`;
